[package]
name = "rust-kb"
version = "0.1.0"
authors = ["Christopher Kober <ChristopherKober@users.noreply.github.com>",
           "Eric Hao <brotatotes@gmail.com>",
           "Adam He <ah29954@gmail.com>"]

[dependencies]
pest = "^1.0"
pest_derive = "^1.0"
nom = "^4.0"
weak-table = "^0.2.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
